[gd_scene load_steps=2 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="ButtonHost" type="Button" parent="."]
margin_left = 357.0
margin_top = 260.029
margin_right = 664.0
margin_bottom = 319.029
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonJoin" type="Button" parent="."]
margin_left = 357.0
margin_top = 348.029
margin_right = 664.0
margin_bottom = 407.029
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 360.0
margin_top = 425.029
margin_right = 664.0
margin_bottom = 483.029
text = "Join (local)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoloButton" type="Button" parent="."]
margin_left = 360.0
margin_top = 176.484
margin_right = 664.0
margin_bottom = 234.484
text = "Solo"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ButtonHost" to="." method="_on_ButtonHost_pressed"]
[connection signal="pressed" from="ButtonJoin" to="." method="_on_ButtonJoin_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_ButtonJoinLocal_pressed"]
[connection signal="pressed" from="SoloButton" to="." method="_on_SoloButton_pressed"]
